Fix error page padding on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@ main > section,
   overflow: auto; /* defeat margin collapse */
 }
 
+.error,
 .usa-disclaimer,
 .ood-banner > *,
 main > article > * ,
